# service_app

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
service/: celery_app.py
service/clients/migrations/: 0001_initial.py
service/service/: settings.py
service/services/: models.py  serializers.py  tasks.py  views.py
service/services/migrations/: 0001_initial.py  0002_subscription_price.py  0003_subscription_comment.py
