[tool.poetry]
name = "service-app"
version = "0.1.0"
description = ""
authors = ["Roman Slyusar <slyusarrv@yandex.ru>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
django = "3.2.16"
djangorestframework = "3.14.0"
psycopg2-binary = "2.9.5"
celery = {version = "5.2.7", extras = ["redis"]}
flower = "1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
